main/default/objects/API_Log__c/API_Log__c.object-meta.xml
<CustomObject>
    <label>API Log</label>
    <nameField>
        <label>API Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>