main/default/objects/API_Log__c/fields/Azure_Id__c.field-meta.xml
<CustomField>
    <fullName>Azure_Id__c</fullName>
    <label>Azure Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>