main/default/objects/API_Log__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <label>Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>