main/default/objects/API_Log__c/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <label>Functionality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>