main/default/objects/API_Log__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <label>Quote Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>