main/default/objects/API_Log__c/fields/Request_Header__c.field-meta.xml
<CustomField>
    <fullName>Request_Header__c</fullName>
    <label>Request Header</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>