main/default/objects/API_Log__c/fields/sObject_Id__c.field-meta.xml
<CustomField>
    <fullName>sObject_Id__c</fullName>
    <label>sObject Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>