main/default/objects/API_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Request_Header__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>