main/default/objects/API_Log__c/listViews/Generate_Document.listView-meta.xml
<ListView>
    <fullName>Generate_Document</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Request_Header__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Generate_Document_V2 Callout</value>
    </filters>
    <label>Generate Document</label>
</ListView>