main/default/objects/API_Log__c/listViews/NIPR_Calls.listView-meta.xml
<ListView>
    <fullName>NIPR_Calls</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Endpoint__c</columns>
    <columns>Request_Header__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NIPR</value>
    </filters>
    <label>NIPR Calls</label>
</ListView>