main/default/objects/API_Log__c/listViews/Rating.listView-meta.xml
<ListView>
    <fullName>Rating</fullName>
    <columns>NAME</columns>
    <columns>Call_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Functionality__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Endpoint__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Request_Method__c</columns>
    <columns>Response_Body__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Rating</value>
    </filters>
    <label>Rating</label>
</ListView>