main/default/objects/API_Log__c/listViews/Rating_Requests.listView-meta.xml
<ListView>
    <fullName>Rating_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Endpoint__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Request_Header__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>RatingAPI Callout</value>
    </filters>
    <label>Rating Requests</label>
</ListView>